#371 issue explore countries, fix truncate reference when larger than 2 lines

--- a/frontend/css/rodi_css.css
+++ b/frontend/css/rodi_css.css
@@ -374,6 +374,8 @@ h1 + .lead {
     -webkit-box-orient: vertical;
     width:100%;
     overflow:hidden;
+    min-height: 50px;
+
 }
 
 
